# fedimint

./: .bitcoind_test.log.swp  .gitignore  Cargo.toml  debug.md  flake.nix  justfile.fedimint.just  run-failing-backcompat.sh  run-full-backcompat.sh  summary.sh  test-local-failing.sh  test.sh  unit-test.sh
.github/templates/: failed-backport-issue.md
.github/workflows/: backport.yml  ci-backwards-compatibility.yml  ci-nix.yml  daily.yml  docs.yml  upgrade-tests.yml
benchmarks/: benchmark-baseline.csv  benchmark-with-audit-keys.csv
crypto/tbs/: Cargo.toml
devimint/: Cargo.toml
devimint/src/: devfed.rs  external.rs  federation.rs  gatewayd.rs  main.rs  tests.rs  util.rs  vars.rs  version_constants.rs
docker/: docker-compose.yaml
docker/deploy-fedimintd/: .env  deploy.sh
docker/iroh-fedimintd/: deploy.sh  docker-compose.yaml
downstream-sandbox/: Cargo.toml
downstream-sandbox/src/: lib.rs  main.rs
fedimint-api-client/: Cargo.toml
fedimint-api-client/src/: lib.rs
fedimint-bitcoind/: Cargo.toml
fedimint-bitcoind/src/: bitcoincore.rs  electrum.rs  esplora.rs
fedimint-cli/: Cargo.toml
fedimint-cli/src/: client.rs  lib.rs  utils.rs
fedimint-client-module/src/: lib.rs
fedimint-client/src/: db.rs  lib.rs
fedimint-core/: Cargo.toml
fedimint-core/src/: amount.rs  (+9 more)
fedimint-dbtool/: Cargo.toml
fedimint-server/: Cargo.toml
fedimint-startos/: Dockerfile  Makefile  config_get.sh  config_set.sh  config_spec.yaml  docker_entrypoint.sh  manifest.yaml
recoverytool/: Cargo.toml
scripts/: _common.sh
temp/: fm_test_dir.txt  test-ci-all-runs.txt
(+108 files in other folders)
