[package]
name = "downstream-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "downstream_sandbox"
path = "src/lib.rs"

[dependencies]

[build-dependencies]
fedimint-build = { path = "../fedimint-build" }
